tests/fixtures/type_checker/pass/return_expected_if.galaxy
int return_expected_if()
{
    if (true) {
        return 1;
    }
    else {
        return 1;
    }
}

void return_not_required()
{
}
