tests/fixtures/type_checker/error/return_expected_if_nested_om.galaxy
int return_expected_if_nested()
{
    if (true) {
        if (true) {
            return 0;
        }
        else if (false) {
        }
        else {
            return 1;
        }
    }
    else {
        return 2;
    }
}
